--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=9090
 spring.datasource.url=jdbc:oracle:thin:@jaesung_high?TNS_ADMIN=C:/jaesung/spring/resource/Wallet_jaesung
+spring.mvc.hiddenmethod.filter.enabled=true
